--- a/lib/timesheets_web/templates/layout/app.html.eex
+++ b/lib/timesheets_web/templates/layout/app.html.eex
@@ -4,16 +4,16 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Timesheets · Phoenix Framework</title>
+    <title>Timesheets</title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
   </head>
   <body>
     <div class="container">
       <nav class="navbar navbar-expand-sm navbar-light bg-white">
         <div class="col-4">
-          <a class="navbar-brand" href="#">Lens</a>
+          <a class="navbar-brand" href="#">Timesheets</a>
         </div>
-        <div class="col-8">
+        <div class="col-4">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
               <a class="nav-link" href="#">All Photos</a>
